lib/core/item-path-parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { ItemPathExpression: peg$parseItemPathExpression, Value: peg$parseValue },
        peg$startRuleFunction  = peg$parseItemPathExpression,

        peg$c0 = function(paths) {
            paths.keywords = keywords;
            return paths;
          },
        peg$c1 = function(left, right) { return combine(left, right, 'union') },
        peg$c2 = "union",
        peg$c3 = { type: "literal", value: "union", description: "\"union\"" },
        peg$c4 = function(union) {
            keyword('keyword.set');
            return union;
          },
        peg$c5 = function(left, right) { return combine(left, right, 'except') },
        peg$c6 = "except",
        peg$c7 = { type: "literal", value: "except", description: "\"except\"" },
        peg$c8 = function(except) {
            keyword('keyword.set');
            return except;
          },
        peg$c9 = function(left, right) { return combine(left, right, 'intersect') },
        peg$c10 = "intersect",
        peg$c11 = { type: "literal", value: "intersect", description: "\"intersect\"" },
        peg$c12 = function(intersect) {
            keyword('keyword.set');
            return intersect;
          },
        peg$c13 = "[",
        peg$c14 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c15 = "]",
        peg$c16 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c17 = function(start, end) {
            return {
              start: start === null ? 0 : start,
              end: end
            }
          },
        peg$c18 = ":",
        peg$c19 = { type: "literal", value: ":", description: "\":\"" },
        peg$c20 = function(integer) {
            if (integer !== null) {
              return integer;
            }
            return Number.MAX_VALUE;
          },
        peg$c21 = "-",
        peg$c22 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c23 = /^[0-9]/,
        peg$c24 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c25 = function(sign, number) {
            if (sign) {
              return -parseInt(number.join(''), 10);
            } else {
              return parseInt(number.join(''), 10);
            }
          },
        peg$c26 = "(",
        peg$c27 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c28 = ")",
        peg$c29 = { type: "literal", value: ")", description: "\")\"" },
        peg$c30 = function(expression, slice) {
            expression.slice = slice;
            return expression;
          },
        peg$c31 = "/",
        peg$c32 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c33 = function(absolute, step, trailingSteps) {
            absolute = !! absolute;

            if (absolute) {
              keyword('entity.other.axis', '/');
            } else if (step.axis === 'child') {
              // Default to descendent axis for non absolute paths.
              step.axis = 'descendant';
            }

            var steps = [step];
            if (trailingSteps) {
               steps = steps.concat(trailingSteps);
            }
            return {
              absolute : absolute,
              steps : steps
            }
          },
        peg$c34 = function(axis, type, predicate, slice) {
            return type || predicate;
          },
        peg$c35 = function(axis, type, predicate, slice) {
            if (!axis) {
              axis = 'child';
            }

            if (!type) {
              type = '*';
            }

            if (!predicate) {
              predicate = '*'
            }

            return {
              axis : axis,
              type : type,
              predicate : predicate,
              slice: slice
            }
          },
        peg$c36 = "ancestor-or-self::",
        peg$c37 = { type: "literal", value: "ancestor-or-self::", description: "\"ancestor-or-self::\"" },
        peg$c38 = "ancestor::",
        peg$c39 = { type: "literal", value: "ancestor::", description: "\"ancestor::\"" },
        peg$c40 = "child::",
        peg$c41 = { type: "literal", value: "child::", description: "\"child::\"" },
        peg$c42 = "descendant-or-self::",
        peg$c43 = { type: "literal", value: "descendant-or-self::", description: "\"descendant-or-self::\"" },
        peg$c44 = "descendant::",
        peg$c45 = { type: "literal", value: "descendant::", description: "\"descendant::\"" },
        peg$c46 = "following-sibling::",
        peg$c47 = { type: "literal", value: "following-sibling::", description: "\"following-sibling::\"" },
        peg$c48 = "following::",
        peg$c49 = { type: "literal", value: "following::", description: "\"following::\"" },
        peg$c50 = "preceding-sibling::",
        peg$c51 = { type: "literal", value: "preceding-sibling::", description: "\"preceding-sibling::\"" },
        peg$c52 = "preceding::",
        peg$c53 = { type: "literal", value: "preceding::", description: "\"preceding::\"" },
        peg$c54 = "parent::",
        peg$c55 = { type: "literal", value: "parent::", description: "\"parent::\"" },
        peg$c56 = "self::",
        peg$c57 = { type: "literal", value: "self::", description: "\"self::\"" },
        peg$c58 = "..",
        peg$c59 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c60 = function(axis) {
              keyword('entity.other.axis');

              switch(axis) {
              case '/':
                return 'descendant';
              case '..':
                return 'parent';
              default:
                return axis.substr(0, axis.length - 2);
              }
            },
        peg$c61 = function(name) {
            var types = options.types;
            return types && types[name];
          },
        peg$c62 = function(name) {
            keyword('entity.other.axis');
            return name;
          },
        peg$c63 = function(step) {
            keyword('entity.other.axis', '/');
            return step;
          },
        peg$c64 = function(left, right) { return combine(left, right, 'or') },
        peg$c65 = "or",
        peg$c66 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c67 = function(or) {
            keyword('keyword.boolean');
            return or;
          },
        peg$c68 = function(left, right) { return combine(left, right, 'and') },
        peg$c69 = "and",
        peg$c70 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c71 = function(and) {
            keyword('keyword.boolean');
            return and;
          },
        peg$c72 = function(not, expression) {
            if (not && (not.length % 2)) {
              return {
                not : expression
              };
            } else {
              return expression;
            }
          },
        peg$c73 = "not",
        peg$c74 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c75 = function(not) {
            keyword('keyword.boolean');
            return not;
          },
        peg$c76 = function(expression) { return expression; },
        peg$c77 = "*",
        peg$c78 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c79 = function(attributePath, relation, modifier, value) {
            return {
              attributePath : attributePath || ['text'],
              relation : relation || 'contains',
              modifier : modifier || 'i',
              value : value
            }
          },
        peg$c80 = function(attributePath) {
            return {
              attributePath : attributePath,
              relation : null,
              value : null
            }
          },
        peg$c81 = "@",
        peg$c82 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c83 = function(name, trailingSegments) {
            var segments = [name];
            if (trailingSegments) {
              segments = segments.concat(trailingSegments);
            }
            keyword('entity.other.attribute-name');
            return segments;
          },
        peg$c84 = function(name) {
            return name;
          },
        peg$c85 = function(chars) {
            return chars.join('');
          },
        peg$c86 = function(char) { return char; },
        peg$c87 = "beginswith",
        peg$c88 = { type: "literal", value: "beginswith", description: "\"beginswith\"" },
        peg$c89 = "contains",
        peg$c90 = { type: "literal", value: "contains", description: "\"contains\"" },
        peg$c91 = "endswith",
        peg$c92 = { type: "literal", value: "endswith", description: "\"endswith\"" },
        peg$c93 = "like",
        peg$c94 = { type: "literal", value: "like", description: "\"like\"" },
        peg$c95 = "matches",
        peg$c96 = { type: "literal", value: "matches", description: "\"matches\"" },
        peg$c97 = "=",
        peg$c98 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c99 = "!=",
        peg$c100 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c101 = "<=",
        peg$c102 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c103 = ">=",
        peg$c104 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c105 = "<",
        peg$c106 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c107 = ">",
        peg$c108 = { type: "literal", value: ">", description: "\">\"" },
        peg$c109 = function(relation) {
            keyword('keyword.operator.relation');
            return relation;
          },
        peg$c110 = "s",
        peg$c111 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c112 = "i",
        peg$c113 = { type: "literal", value: "i", description: "\"i\"" },
        peg$c114 = "n",
        peg$c115 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c116 = "d",
        peg$c117 = { type: "literal", value: "d", description: "\"d\"" },
        peg$c118 = function(modifier) {
            keyword('keyword.operator.modifier');
            return modifier;
          },
        peg$c119 = function(strings) {
            var results = [];
            for (var i = 0; i < strings.length; i++) {
              results.push(strings[i].join(''));
            }
            return results.join('').trim();
          },
        peg$c120 = { type: "other", description: "string" },
        peg$c121 = "\"",
        peg$c122 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c123 = function() { return "";    },
        peg$c124 = function(chars) {
            keyword('string.quoted');
            return chars;
          },
        peg$c125 = function(chars) { return chars.join(""); },
        peg$c126 = /^[^"\\\0-\x1F]/,
        peg$c127 = { type: "class", value: "[^\"\\\\\\0-\\x1F\\x7f]", description: "[^\"\\\\\\0-\\x1F\\x7f]" },
        peg$c128 = "\\\"",
        peg$c129 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c130 = function() { return '"';  },
        peg$c131 = "\\\\",
        peg$c132 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c133 = function() { return "\\"; },
        peg$c134 = "\\/",
        peg$c135 = { type: "literal", value: "\\/", description: "\"\\\\/\"" },
        peg$c136 = function() { return "/";  },
        peg$c137 = "\\b",
        peg$c138 = { type: "literal", value: "\\b", description: "\"\\\\b\"" },
        peg$c139 = function() { return "\b"; },
        peg$c140 = "\\f",
        peg$c141 = { type: "literal", value: "\\f", description: "\"\\\\f\"" },
        peg$c142 = function() { return "\f"; },
        peg$c143 = "\\n",
        peg$c144 = { type: "literal", value: "\\n", description: "\"\\\\n\"" },
        peg$c145 = function() { return "\n"; },
        peg$c146 = "\\r",
        peg$c147 = { type: "literal", value: "\\r", description: "\"\\\\r\"" },
        peg$c148 = function() { return "\r"; },
        peg$c149 = "\\t",
        peg$c150 = { type: "literal", value: "\\t", description: "\"\\\\t\"" },
        peg$c151 = function() { return "\t"; },
        peg$c152 = /^[~`!#$%\^&*-+=[{}\]|\\;',.?\/\-]/,
        peg$c153 = { type: "class", value: "[~`!#$%^&*-+=\\[\\{\\}\\]|\\\\;',.?/-]", description: "[~`!#$%^&*-+=\\[\\{\\}\\]|\\\\;',.?/-]" },
        peg$c154 = function(string) {
            return reservedWords[string];
          },
        peg$c155 = function(string) {
            keyword('string.unquoted');
            return string;
          },
        peg$c156 = /^[A-Z]/,
        peg$c157 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c158 = "_",
        peg$c159 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c160 = /^[a-z]/,
        peg$c161 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c162 = /^[\xC0-\xD6]/,
        peg$c163 = { type: "class", value: "[\\u00C0-\\u00D6]", description: "[\\u00C0-\\u00D6]" },
        peg$c164 = /^[\xD8-\xF6]/,
        peg$c165 = { type: "class", value: "[\\u00D8-\\u00F6]", description: "[\\u00D8-\\u00F6]" },
        peg$c166 = /^[\xF8-\u02FF]/,
        peg$c167 = { type: "class", value: "[\\u00F8-\\u02FF]", description: "[\\u00F8-\\u02FF]" },
        peg$c168 = /^[\u0370-\u037D]/,
        peg$c169 = { type: "class", value: "[\\u0370-\\u037D]", description: "[\\u0370-\\u037D]" },
        peg$c170 = /^[\u037F-\u1FFF]/,
        peg$c171 = { type: "class", value: "[\\u037F-\\u1FFF]", description: "[\\u037F-\\u1FFF]" },
        peg$c172 = /^[\u200C-\u200D]/,
        peg$c173 = { type: "class", value: "[\\u200C-\\u200D]", description: "[\\u200C-\\u200D]" },
        peg$c174 = /^[\u2070-\u218F]/,
        peg$c175 = { type: "class", value: "[\\u2070-\\u218F]", description: "[\\u2070-\\u218F]" },
        peg$c176 = /^[\u2C00-\u2FEF]/,
        peg$c177 = { type: "class", value: "[\\u2C00-\\u2FEF]", description: "[\\u2C00-\\u2FEF]" },
        peg$c178 = /^[\u3001-\uD7FF]/,
        peg$c179 = { type: "class", value: "[\\u3001-\\uD7FF]", description: "[\\u3001-\\uD7FF]" },
        peg$c180 = /^[\uF900-\uFDCF]/,
        peg$c181 = { type: "class", value: "[\\uF900-\\uFDCF]", description: "[\\uF900-\\uFDCF]" },
        peg$c182 = /^[\uFDF0-\uFFFD]/,
        peg$c183 = { type: "class", value: "[\\uFDF0-\\uFFFD]", description: "[\\uFDF0-\\uFFFD]" },
        peg$c184 = ".",
        peg$c185 = { type: "literal", value: ".", description: "\".\"" },
        peg$c186 = /^[\xB7]/,
        peg$c187 = { type: "class", value: "[\\u00B7]", description: "[\\u00B7]" },
        peg$c188 = /^[\u0300-\u036F]/,
        peg$c189 = { type: "class", value: "[\\u0300-\\u036F]", description: "[\\u0300-\\u036F]" },
        peg$c190 = /^[\u203F-\u2040]/,
        peg$c191 = { type: "class", value: "[\\u203F-\\u2040]", description: "[\\u203F-\\u2040]" },
        peg$c192 = function(startchar, chars) {
            return startchar + chars.join('');
          },
        peg$c193 = { type: "other", description: "whitespace" },
        peg$c194 = function(whitespace) { return whitespace.join("") },
        peg$c195 = /^[ \t\n\r]/,
        peg$c196 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseItemPathExpression() {
      var s0, s1, s2;

      var key    = peg$currPos * 40 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseUnionPaths();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseUnionPaths() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 40 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseExceptPaths();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseUnionKeyword();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseUnionPaths();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseExceptPaths();
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseUnionKeyword() {
      var s0, s1;

      var key    = peg$currPos * 40 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseExceptPaths() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 40 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseIntersectPaths();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseExceptKeyword();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseExceptPaths();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseIntersectPaths();
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseExceptKeyword() {
      var s0, s1;

      var key    = peg$currPos * 40 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseIntersectPaths() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 40 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
